--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <div class="contact-container">
 
-        <a class="contact-item" href="https://charity.gofundme.com/o/en/team/tiw24-the-neo-futurists" target="_blank"><strong>DONATE</strong></a>
+        <a class="contact-item" href="https://neofuturists.secure.force.com/donate/?dfId=a0yU0000000mzshIAA" target="_blank"><strong>DONATE</strong></a>
 
 
         <a class="contact-item" href="https://www.patreon.com/theneofuturists" target="_blank">BECOME A PATRON</a>
