--- a/karaoke.html
+++ b/karaoke.html
@@ -52,7 +52,7 @@
 
 <!-- INTRO VIDEO -->
     <div class="intro-vid">
-        <div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/o3h96_K5O1g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        <div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/Dr4dJyUIYfg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
 
 
